<resources>
    <string name="app_name">OsezBeacon</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="banner_text">Current Status</string>
    <string name="connection_status">Connection to the server</string>
    <string name="success">Success!</string>
    <string name="failure">Failure</string>
    <string name="server_answer">OK</string>
    <string name="gps_location">Longitude: 123.34\nLatitude: 34.33</string>
    <string name="gps_label">GPS Location:</string>
    <string name="ble_beacon">BLE Beacons</string>
    <string name="beacon_connection_alarm">Beacon Connected</string>
    <string name="beacon_disconnection_alarm">Beacon Disonnected</string>
    <string name="beacon_uuid">UUID: 00000000-28ef-7e30-18f0-7e3068ed7e30</string>
    <string name="beacon_nmajor">Major: 33</string>
    <string name="beacon_nminor">Minor: 5</string>

    <string name="modify_beacon">Modify Beacon</string>
    <string name="start_modify">Start Modify</string>
    <string name="get_device_info">Get Device Information</string>
    <string name="battery">Battery：</string>
    <string name="getBattery"> Get Battery</string>
    <string name="transmitting_power">Power：</string>
    <string name="get_transmitting_power">Get Power</string>
    <string name="advinterval">Advinterval：</string>
    <string name="get_advinterval">Get Advinterval</string>
    <string name="firmware_version">Firmware:</string>
    <string name="get_firmware_version">Get Firmware</string>
    <string name="manufacturer">Manufacturer:</string>
    <string name="get_manufacturer">Get Manufacturer</string>
    <string name="start_background_notify">Start Background Notify</string>

    <string name="input_password">Input Password</string>
    <string name="cancel">Cancel</string>
    <string name="sure">Sure</string>

    <string name="codeversed_logo">Codeversed Logo</string>
    <string name="normal">Normal</string>
    <string name="big_text_style">Big Text Style</string>
    <string name="big_picture_style">Big Picture Style</string>
    <string name="inbox_style">Inbox Style</string>
    <string name="custom_view">Custom View</string>
</resources>
